[gd_scene load_steps=3 format=3 uid="uid://brigmd3vsvmgl"]

[ext_resource type="Texture2D" uid="uid://co1f4x7yeyokm" path="res://Game/Art/assets/bouldergameprop.png" id="1_ledqr"]
[ext_resource type="Script" path="res://Game/Menus/DialogBox/dialog_box.gd" id="1_xfdxr"]

[node name="DialogBox" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xfdxr")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 250)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="P1" type="CenterContainer" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2

[node name="P1Texture" type="TextureRect" parent="Panel/HBoxContainer/P1"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_ledqr")

[node name="TextBox" type="Label" parent="Panel/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "Ja nii [tles siim, taevalik isa mulle, et ma olen siim"
vertical_alignment = 1
autowrap_mode = 2

[node name="P2" type="CenterContainer" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2

[node name="P2Texture" type="TextureRect" parent="Panel/HBoxContainer/P2"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_ledqr")
